refactor: use RFC 9457
