# docs/swagger.yaml
@@ -1,27 +1,74 @@
 components:
   schemas:
-    model.Credentials:
+    model.AuthResult:
       properties:
         email:
           form: email
+          format: email
           type: string
-        password:
-          form: password
-          type: string
-      required:
-        - email
-        - password
-      type: object
-    model.User:
-      properties:
-        email:
-          form: email
+        id:
+          form: id
+          type: integer
+        jwt:
+          format: jwt
           type: string
         name:
           form: name
           type: string
         password:
           form: password
+          format: byte
+          type: string
+        picture_url:
+          form: picture_url
+          type: string
+      required:
+        - email
+        - name
+        - password
+      type: object
+    model.HandlerResult-array_model_UserIdentified:
+      properties:
+        message:
+          type: string
+        results:
+          items:
+            $ref: "#/components/schemas/model.UserIdentified"
+          type: array
+          uniqueItems: false
+        success:
+          type: boolean
+      type: object
+    model.HandlerResult-model_AuthResult:
+      properties:
+        message:
+          type: string
+        results:
+          $ref: "#/components/schemas/model.AuthResult"
+        success:
+          type: boolean
+      type: object
+    model.HandlerResult-model_UserIdentified:
+      properties:
+        message:
+          type: string
+        results:
+          $ref: "#/components/schemas/model.UserIdentified"
+        success:
+          type: boolean
+      type: object
+    model.User:
+      properties:
+        email:
+          form: email
+          format: email
+          type: string
+        name:
+          form: name
+          type: string
+        password:
+          form: password
+          format: byte
           type: string
         picture_url:
           form: picture_url
@@ -35,6 +82,7 @@ components:
       properties:
         email:
           form: email
+          format: email
           type: string
         id:
           form: id
@@ -44,31 +92,7 @@ components:
           type: string
         password:
           form: password
-          type: string
-        picture_url:
-          form: picture_url
-          type: string
-      required:
-        - email
-        - name
-        - password
-      type: object
-    service.AuthResult:
-      properties:
-        email:
-          form: email
-          type: string
-        id:
-          form: id
-          type: integer
-        jwt:
-          format: jwt
-          type: string
-        name:
-          form: name
-          type: string
-        password:
-          form: password
+          format: byte
           type: string
         picture_url:
           form: picture_url
@@ -99,29 +123,32 @@ openapi: 3.1.0
 paths:
   /auth/login:
     post:
+      parameters:
+        - in: query
+          name: email
+          required: true
+          schema:
+            form: email
+            format: email
+            type: string
+        - in: query
+          name: password
+          required: true
+          schema:
+            form: password
+            format: byte
+            type: string
       requestBody:
         content:
-          application/json:
-            schema:
-              oneOf:
-                - type: object
-                - $ref: "#/components/schemas/model.Credentials"
-                  description: Credentials
-                  summary: body
           application/x-www-form-urlencoded:
             schema:
               type: string
-          multipart/form-data:
-            schema:
-              type: object
-        description: Credentials
-        required: true
       responses:
         "200":
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/service.AuthResult"
+                $ref: "#/components/schemas/model.HandlerResult-model_AuthResult"
           description: OK
         "400":
           content:
@@ -174,7 +201,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/service.AuthResult"
+                $ref: "#/components/schemas/model.HandlerResult-model_AuthResult"
           description: Created
         "400":
           content:
@@ -204,9 +231,7 @@ paths:
           content:
             application/json:
               schema:
-                items:
-                  $ref: "#/components/schemas/model.UserIdentified"
-                type: array
+                $ref: "#/components/schemas/model.HandlerResult-array_model_UserIdentified"
           description: OK
         "500":
           content:
@@ -278,7 +303,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/model.UserIdentified"
+                $ref: "#/components/schemas/model.HandlerResult-model_UserIdentified"
           description: OK
         "400":
           content:
