# internal/model/user.go
@@ -22,6 +22,6 @@ type Profile struct {
 }
 
 type Credentials struct {
-	Email    `db:"email" form:"email" json:"email" binding:"required,email"`
-	Password `db:"password" form:"password" json:"password,omitzero" binding:"required,base64"`
+	Email    Email    `db:"email" form:"email" json:"email" binding:"required,email"`
+	Password Password `db:"password" form:"password" json:"password,omitzero" binding:"required,base64"`
 }
